--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
   font-family: "Oswald", Arial, Helvetica, sans-serif;
 }
 
-body {
-  background: rgb(43, 42, 42);
-}
-
 a {
   color: #ffffff;
   text-decoration: none;
@@ -21,7 +17,6 @@ a {
   left: 0;
   top: 0;
   width: 100%;
-  padding: 25px 9x;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -90,7 +85,7 @@ a {
   font-size: 16px;
   color: #1f242d;
   font-weight: 600;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .btn:hover {
@@ -111,7 +106,7 @@ a {
   font-size: 20px;
   color: #7cf03d;
   margin: 0 8px;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .home-info .btn-sci .sci a:hover {
@@ -121,25 +116,68 @@ a {
 }
 
 .home-img .img-box {
+  position: relative;
   width: 32vw;
   height: 32vw;
-  background: red;
   border-radius: 50%;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.home-img .img-box::before,
+.home-img .img-box::after {
+  content: "";
+  position: absolute;
+  width: 670px;
+  height: 670px;
+  background: conic-gradient(transparent, transparent, transparent, #7cf03d);
 }
 
 .home-img .img-box .img-item {
   position: relative;
   width: 100%;
   height: 100%;
-  background: slateblue;
+  background: #1f242d;
   border-radius: 50%;
+  border: .1px solid #1f242d;
   display: flex;
   justify-content: center;
+  z-index: 1;
+  overflow: hidden;
 }
 
 .home-img .img-box .img-item img {
   position: absolute;
+  top: 30px;
   display: block;
   width: 85%;
   object-fit: cover;
+  mix-blend-mode: lighten;
+}
+
+.bars-animation {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  z-index: -1;
+}
+
+.bars-animation .bar {
+  width: 100%;
+  height: 100%;
+  background: #1f242d;
+  border: 2px solid red;
+  transform: translateY(-100%);
+  animation: show-bars .5s ease-in-out forwards;
+  animation-delay: calc(.1s * var(--i));
+}
+
+@keyframes show-bars {
+  100% {
+    transform: translateY(0%);
+  }
 }
