--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,17 @@ a {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  animation: show-content 1.5s linear forwards;
+  animation-delay: 1.2s;
+}
+
+@keyframes show-content {
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 .navbar .logo {
@@ -51,9 +62,14 @@ a {
 .home {
   display: flex;
   align-items: center;
+  gap: 50px;
   height: 100vh;
   padding: 60px 9% 0;
-  color: #fff;
+  color: #fff; 
+  visibility: hidden;
+  opacity: 0;
+  animation: show-content 1.5s linear forwards;
+  animation-delay: 1.6s;
 }
 
 .home-info h1 {
@@ -63,6 +79,41 @@ a {
 .home-info h2 {
   font-size: 32px;
   margin-top: -10px;
+}
+
+.home-info h2 span {
+  position: relative;
+  display: inline-block;
+  color: transparent;
+  -webkit-text-stroke: .7px #7cf03d;
+  animation: display-text 16s linear infinite;
+  animation-delay: calc(-4s * var(--i));
+}
+
+@keyframes display-text {
+  25%, 100% {
+    display: none;
+  }
+}
+
+.home-info h2 span::before {
+  content: attr(data-text);
+  position: absolute;
+  width: 0;
+  border-right: 2px solid #7cf03d;
+  color: #7cf03d;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: fill-text 4s linear infinite;
+}
+
+@keyframes fill-text {
+  10%, 100% {
+    width: 0;
+  }
+  70%, 90% {
+  width: 100%;
+  }
 }
 
 .home-info p {
@@ -134,6 +185,18 @@ a {
   width: 670px;
   height: 670px;
   background: conic-gradient(transparent, transparent, transparent, #7cf03d);
+  transform: rotate(0deg);
+  animation: rotate-border 10s linear infinite;
+}
+
+.home-img .home-box::after {
+  animation-delay: -5s;
+}
+
+@keyframes rotate-border {
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .home-img .img-box .img-item {
@@ -170,7 +233,6 @@ a {
   width: 100%;
   height: 100%;
   background: #1f242d;
-  border: 2px solid red;
   transform: translateY(-100%);
   animation: show-bars .5s ease-in-out forwards;
   animation-delay: calc(.1s * var(--i));
