--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,23 @@ a {
   color: #7cf03d;
 }
 
+section {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 10rem 9% 2rem;
+  background: var(--bg-color);
+  visibility: hidden;
+  opacity: 0;
+  overflow: hidden;
+}
+
+section.active {
+  visibility: visible;
+  opacity: 1;
+  overflow: auto;
+}
+
 .home {
   display: flex;
   align-items: center;
