--- a/css/style.css
+++ b/css/style.css
@@ -260,3 +260,13 @@ section.active {
     transform: translateY(0%);
   }
 }
+
+.heading {
+  font-size: 4.5rem;
+  text-align: center;
+  margin-bottom: 2rem
+}
+
+.heading span {
+  color: var(--main-color);
+}
