--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,27 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  font-family: "Oswald", Arial, Helvetica, sans-serif;
+}
+
+:root {
+  --bg-color: #1f242d;
+  --second-bg-color: #323946;
+  --main-bg-color: #7cf03d;
+  --white-color: #fff;
+  --disabled-color: #fff3;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  color: var(--white-color);
+  background: var(--bg-color);
   font-family: "Oswald", Arial, Helvetica, sans-serif;
 }
 
@@ -82,7 +103,7 @@ section.active {
   gap: 50px;
   height: 100vh;
   padding: 60px 9% 0;
-  color: #fff; 
+  color: #fff;
   visibility: hidden;
   opacity: 0;
   animation: show-content 1.5s linear forwards;
@@ -102,13 +123,14 @@ section.active {
   position: relative;
   display: inline-block;
   color: transparent;
-  -webkit-text-stroke: .7px #7cf03d;
+  -webkit-text-stroke: 0.7px #7cf03d;
   animation: display-text 16s linear infinite;
   animation-delay: calc(-4s * var(--i));
 }
 
 @keyframes display-text {
-  25%, 100% {
+  25%,
+  100% {
     display: none;
   }
 }
@@ -125,11 +147,13 @@ section.active {
 }
 
 @keyframes fill-text {
-  10%, 100% {
+  10%,
+  100% {
     width: 0;
   }
-  70%, 90% {
-  width: 100%;
+  70%,
+  90% {
+    width: 100%;
   }
 }
 
@@ -222,7 +246,7 @@ section.active {
   height: 100%;
   background: #1f242d;
   border-radius: 50%;
-  border: .1px solid #1f242d;
+  border: 0.1px solid #1f242d;
   display: flex;
   justify-content: center;
   z-index: 1;
@@ -251,8 +275,8 @@ section.active {
   height: 100%;
   background: #1f242d;
   transform: translateY(-100%);
-  animation: show-bars .5s ease-in-out forwards;
-  animation-delay: calc(.1s * var(--i));
+  animation: show-bars 0.5s ease-in-out forwards;
+  animation-delay: calc(0.1s * var(--i));
 }
 
 @keyframes show-bars {
@@ -264,9 +288,15 @@ section.active {
 .heading {
   font-size: 4.5rem;
   text-align: center;
-  margin-bottom: 2rem
+  margin-bottom: 2rem;
 }
 
 .heading span {
-  color: var(--main-color);
+  color: var(--main-bg-color);
+}
+
+.services-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2rem;
 }
