--- a/css/style.css
+++ b/css/style.css
@@ -295,8 +295,31 @@ section.active {
   color: var(--main-bg-color);
 }
 
+.services {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
 .services-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 2rem;
+}
+
+.services-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  text-align: center;
+  border-radius: 1rem;
+  box-shadow: 0 4px 6px rgb(0, 0, 0, 0.1);
+  transition: 0.3s;
+  font-size: 15px;
+}
+
+.services-box p {
+  padding: 2rem;
 }
