--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ section {
   visibility: hidden;
   opacity: 0;
   overflow: hidden;
+  transition: opacity 0.5s, visability 0.5s;
 }
 
 section.active {
@@ -303,23 +304,55 @@ section.active {
 
 .services-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-template-columns: repeat(3, 1fr); /* 3 kolom */
   gap: 2rem;
+  justify-items: center; /* Untuk membuat konten rata tengah */
 }
 
-.services-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
-  text-align: center;
+
+
+.services-container .services-box {
+  padding: 3rem 2.5rem;
+  background: var(--second-bg-color);
+  border: .2rem solid var(--second-bg-color);
   border-radius: 1rem;
-  box-shadow: 0 4px 6px rgb(0, 0, 0, 0.1);
-  transition: 0.3s;
-  font-size: 15px;
+  transition: .5s;
+}
+
+.services-container .services-box:hover {
+  border-color: var(--main-bg-color);
+  transform: scale(1.02);
+}
+
+
+.services-box .icon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.services-box .icon i {
+  font-size: 4.5rem;
+}
+
+.services-box .icon a {
+  display: inline-flex;
+  background: var(--white-color);
+  border-radius: 50%;
+  padding: 1;
+}
+
+.services-box .icon a i {
+  font-size: 3rem;
+  color: var(--bg-color);
+  transform: rotate(225deg);
+}
+
+.services-box h3 {
+  font-size: 3rem;
+  margin: .5rem 0 2rem;
 }
 
 .services-box p {
-  padding: 2rem;
+  font-size: 1.6rem;
 }
