--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,7 +11,7 @@
 :root {
   --bg-color: #1f242d;
   --second-bg-color: #323946;
-  --main-bg-color: #7cf03d;
+  --main-color: #7cf03d;
   --white-color: #fff;
   --disabled-color: #fff3;
 }
@@ -22,62 +22,43 @@ html {
 
 body {
   color: var(--white-color);
-  background: var(--bg-color);
-  font-family: "Oswald", Arial, Helvetica, sans-serif;
 }
 
-a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.navbar {
+header {
   position: fixed;
-  margin: 10px;
-  padding: 25px 75px;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
+  padding: 2rem 9%;
+  background: var(--bg-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  visibility: hidden;
-  opacity: 0;
-  animation: show-content 1.5s linear forwards;
-  animation-delay: 1.2s;
 }
 
-@keyframes show-content {
-  100% {
-    visibility: visible;
-    opacity: 1;
-  }
-}
-
-.navbar .logo {
-  font-size: 30px;
+.logo {
+  font-size: 3rem;
+  color: var(--white-color);
   font-weight: 700;
 }
 
-.navbar ul {
-  display: flex;
-}
-
-.navbar ul li {
-  list-style: none;
-  margin-left: 35px;
-}
-
-.navbar ul li a {
-  font-size: 20px;
+nav a {
+  font-size: 2rem;
+  color: var(--white-color);
   font-weight: 500;
-  transition: 0.5s;
+  margin-left: 3.5rem;
+  transition: .5s;
 }
 
-.navbar ul li:hover a,
-.navbar ul li.active a {
-  color: #7cf03d;
+nav a:hover,
+nav a.active {
+  color: var(--main-color);
+}
+
+#menu-icon {
+  font-size: 4rem;
+  display: none;
 }
 
 section {
@@ -89,7 +70,6 @@ section {
   visibility: hidden;
   opacity: 0;
   overflow: hidden;
-  transition: opacity 0.5s, visability 0.5s;
 }
 
 section.active {
@@ -101,119 +81,111 @@ section.active {
 .home {
   display: flex;
   align-items: center;
-  gap: 50px;
-  height: 100vh;
-  padding: 60px 9% 0;
-  color: #fff;
-  visibility: hidden;
-  opacity: 0;
-  animation: show-content 1.5s linear forwards;
-  animation-delay: 1.6s;
+  gap: 5rem;
 }
 
-.home-info h1 {
-  font-size: 55px;
+.home-detail h1 {
+  font-size: clamp(3.5rem, 10vw, 5.5rem);
 }
 
-.home-info h2 {
-  font-size: 32px;
-  margin-top: -10px;
+.home-detail h2 {
+  display: inline-block;
+  font-size: 3.2rem;
+  margin-top: -1rem;
 }
 
-.home-info h2 span {
+.home-detail h2 span {
   position: relative;
   display: inline-block;
   color: transparent;
-  -webkit-text-stroke: 0.7px #7cf03d;
+  -webkit-text-stroke: .07rem var(--main-color);
   animation: display-text 16s linear infinite;
   animation-delay: calc(-4s * var(--i));
 }
 
 @keyframes display-text {
-  25%,
-  100% {
+  25%, 100% {
     display: none;
   }
 }
 
-.home-info h2 span::before {
+.home-detail h2 span::before {
   content: attr(data-text);
   position: absolute;
   width: 0;
-  border-right: 2px solid #7cf03d;
-  color: #7cf03d;
+  border-right: .2rem solid var(--main-color);
+  color: var(--main-color);
   white-space: nowrap;
   overflow: hidden;
   animation: fill-text 4s linear infinite;
 }
 
 @keyframes fill-text {
-  10%,
-  100% {
+  10%, 100% {
     width: 0;
   }
-  70%,
-  90% {
+
+  70%, 90% {
     width: 100%;
   }
 }
 
-.home-info p {
-  font-size: 16px;
-  margin: 10px 0 25px;
+.home-detail p {
+  font-size: 1.6rem;
+  margin: 1rem 0 2.5rem;
 }
 
-.home-info .btn-sci {
+.home-detail .btn-sci {
   display: flex;
   align-items: center;
 }
 
 .btn {
   display: inline-block;
-  padding: 10px 30px;
-  background: #7cf03d;
-  border: 2px solid #7cf03d;
-  border-radius: 40px;
-  box-shadow: 0 0 10px #7cf03d;
-  font-size: 16px;
-  color: #1f242d;
-  font-weight: 600;
-  transition: 0.5s;
+  padding: 1rem 3rem;
+  background: var(--main-color);
+  border: .2rem solid var(--main-color);
+  border-radius: 4rem;
+  box-shadow: 0 0 1rem var(--main-color);
+  font-size: 1.6rem;
+  color: var(--bg-color);
+  font-weight: 500;
+  transition: .5s;
 }
 
 .btn:hover {
   background: transparent;
-  color: #7cf03d;
+  color: var(--main-color);
   box-shadow: none;
 }
 
-.home-info .btn-sci .sci {
-  margin-left: 20px;
+.home-detail .btn-sci .sci {
+  margin-left: 2rem;
 }
 
-.home-info .btn-sci .sci a {
+.home-detail .btn-sci .sci a {
   display: inline-flex;
-  padding: 8px;
-  border: 2px solid #7cf03d;
+  padding: .8rem;
+  border: .2rem solid var(--main-color);
   border-radius: 50%;
-  font-size: 20px;
-  color: #7cf03d;
-  margin: 0 8px;
-  transition: 0.5s;
+  font-size: 2rem;
+  color: var(--main-color);
+  margin: 0 .8rem;
+  transition: .5s;
 }
 
-.home-info .btn-sci .sci a:hover {
-  background: #7cf03d;
-  color: #1f242d;
-  box-shadow: 0 0 10px #7cf03d;
+.home-detail .btn-sci .sci a:hover {
+  background: var(--main-color);
+  color: var(--bg-color);
+  box-shadow: 0 0 1rem var(--main-color);
 }
 
 .home-img .img-box {
   position: relative;
-  width: 32vw;
-  height: 32vw;
+  width: 23vw;
+  height: 23vw;
   border-radius: 50%;
-  padding: 5px;
+  padding: .5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -222,16 +194,16 @@ section.active {
 
 .home-img .img-box::before,
 .home-img .img-box::after {
-  content: "";
+  content: '';
   position: absolute;
-  width: 670px;
-  height: 670px;
-  background: conic-gradient(transparent, transparent, transparent, #7cf03d);
+  width: 50rem;
+  height: 50rem;
+  background: conic-gradient(transparent, transparent, transparent, var(--main-color));
   transform: rotate(0deg);
   animation: rotate-border 10s linear infinite;
 }
 
-.home-img .home-box::after {
+.home-img .img-box::after {
   animation-delay: -5s;
 }
 
@@ -245,9 +217,9 @@ section.active {
   position: relative;
   width: 100%;
   height: 100%;
-  background: #1f242d;
+  background: var(--bg-color);
   border-radius: 50%;
-  border: 0.1px solid #1f242d;
+  border: .01rem solid var(--bg-color);
   display: flex;
   justify-content: center;
   z-index: 1;
@@ -256,34 +228,11 @@ section.active {
 
 .home-img .img-box .img-item img {
   position: absolute;
-  top: 30px;
+  top: 3rem;
   display: block;
   width: 85%;
   object-fit: cover;
   mix-blend-mode: lighten;
-}
-
-.bars-animation {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  z-index: -1;
-}
-
-.bars-animation .bar {
-  width: 100%;
-  height: 100%;
-  background: #1f242d;
-  transform: translateY(-100%);
-  animation: show-bars 0.5s ease-in-out forwards;
-  animation-delay: calc(0.1s * var(--i));
-}
-
-@keyframes show-bars {
-  100% {
-    transform: translateY(0%);
-  }
 }
 
 .heading {
@@ -293,23 +242,17 @@ section.active {
 }
 
 .heading span {
-  color: var(--main-bg-color);
-}
-
-.services {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+  color: var(--main-color);
 }
 
 .services-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 kolom */
+  grid-template-columns: 35% 35% 35%;
+  grid-template-rows: 50% 50% 50%;
   gap: 2rem;
-  justify-items: center; /* Untuk membuat konten rata tengah */
+  justify-content: center;
+  font-size: 15px;
 }
-
-
 
 .services-container .services-box {
   padding: 3rem 2.5rem;
@@ -320,10 +263,9 @@ section.active {
 }
 
 .services-container .services-box:hover {
-  border-color: var(--main-bg-color);
+  border-color: var(--main-color);
   transform: scale(1.02);
 }
-
 
 .services-box .icon {
   display: flex;
@@ -333,13 +275,23 @@ section.active {
 
 .services-box .icon i {
   font-size: 4.5rem;
+  transition: .5s;
+}
+
+.services-box:hover .icon :not(a i) {
+  color: var(--main-color);
 }
 
 .services-box .icon a {
   display: inline-flex;
   background: var(--white-color);
   border-radius: 50%;
-  padding: 1;
+  padding: 1rem;
+  transition: .5s;
+}
+
+.services-box:hover .icon a {
+  background: var(--main-color);
 }
 
 .services-box .icon a i {
@@ -348,11 +300,66 @@ section.active {
   transform: rotate(225deg);
 }
 
+.services-box .icon a:hover i {
+  transform: rotate(180deg);
+}
+
 .services-box h3 {
   font-size: 3rem;
   margin: .5rem 0 2rem;
+  transition: .5s;
+}
+
+.services-box:hover h3 {
+  color: var(--main-color);
 }
 
 .services-box p {
+  font-size: 1.8rem;
+}
+
+.resume-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 5rem;
+}
+
+.resume-box h2 {
+  font-size: 4.5rem;
+}
+
+.resume-box p {
   font-size: 1.6rem;
+}
+
+.resume-box .desc {
+  margin: 2rem 0 2.5rem;
+}
+
+.resume-box .resume-btn {
+  width: 100%;
+  height: 5.3rem;
+  background: var(--second-bg-color);
+  border: .2rem solid var(--second-bg-color);
+  font-size: 1.6rem;
+  color: var(--white-color);
+  font-weight: 500;
+  margin-bottom: 2rem;
+  border-radius: .8rem;
+  cursor: pointer;
+}
+
+.resume-box .resume-btn.active {
+  border-color: var(--main-color);
+  color: var(--main-color);
+}
+
+.resume-detail {
+  display: none;
+  
+}
+
+.resume-box .heading {
+  font-size: 3.5rem;
+  text-align: left;
 }
