--- a/css/style.css
+++ b/css/style.css
@@ -465,3 +465,25 @@ section.active {
   opacity: 1;
   transform: scale(1);
 }
+
+.resume-detail.about .resume-list {
+  height: auto;
+  grid-template-columns: repeat(auto-fit, minmax (25rem, 1fr));
+}
+
+.resume-detail.about .resume-item {
+  height: auto;
+  padding: 0 0 .5rem;
+  background: transparent;
+}
+
+.resume-detail.about .resume-item p {
+  color: var(--main-color);
+  font-size: 2rem;
+}
+
+.resume-detail.about .resume-item p span {
+  color: var(--white-color);
+  margin-left: 1rem;
+  font-size: 2rem;
+}
