--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -35,6 +35,20 @@ header {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  visibility: 100;
+  opacity: 0;
+}
+
+header.active {
+  animation: show-header 1.5s linear forwards;
+  animation-delay: 1.2s;
+}
+
+@keyframes show-header {
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 .logo {
@@ -48,7 +62,7 @@ nav a {
   color: var(--white-color);
   font-weight: 500;
   margin-left: 3.5rem;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 nav a:hover,
@@ -61,21 +75,66 @@ nav a.active {
   display: none;
 }
 
+.bars-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.bars-box .bar {
+  width: 100%;
+  height: 100%;
+  background: var(--bg-color);
+  animation: hide-bars 0.5s ease-in-out both;
+  animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes hide-bars {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+.bars-box.active .bar {
+  animation: show-bars 0.5s ease-in-out both;
+  animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes show-bars {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 section {
   position: absolute;
   width: 100%;
   height: 100%;
   padding: 10rem 9% 2rem;
-  background: var(--bg-color);
   visibility: hidden;
   opacity: 0;
   overflow: hidden;
 }
 
 section.active {
-  visibility: visible;
-  opacity: 1;
-  overflow: auto;
+  animation: show-content 1.5s linear forwards;
+  animation-delay: 1.6s;
+
+}
+
+@keyframes show-content {
+  100% {
+    visibility: visible;
+    opacity: 1;
+    overflow: auto;
+  }
 }
 
 .home {
@@ -98,13 +157,14 @@ section.active {
   position: relative;
   display: inline-block;
   color: transparent;
-  -webkit-text-stroke: .07rem var(--main-color);
+  -webkit-text-stroke: 0.07rem var(--main-color);
   animation: display-text 16s linear infinite;
   animation-delay: calc(-4s * var(--i));
 }
 
 @keyframes display-text {
-  25%, 100% {
+  25%,
+  100% {
     display: none;
   }
 }
@@ -113,7 +173,7 @@ section.active {
   content: attr(data-text);
   position: absolute;
   width: 0;
-  border-right: .2rem solid var(--main-color);
+  border-right: 0.2rem solid var(--main-color);
   color: var(--main-color);
   white-space: nowrap;
   overflow: hidden;
@@ -121,11 +181,13 @@ section.active {
 }
 
 @keyframes fill-text {
-  10%, 100% {
+  10%,
+  100% {
     width: 0;
   }
 
-  70%, 90% {
+  70%,
+  90% {
     width: 100%;
   }
 }
@@ -144,13 +206,13 @@ section.active {
   display: inline-block;
   padding: 1rem 3rem;
   background: var(--main-color);
-  border: .2rem solid var(--main-color);
+  border: 0.2rem solid var(--main-color);
   border-radius: 4rem;
   box-shadow: 0 0 1rem var(--main-color);
   font-size: 1.6rem;
   color: var(--bg-color);
   font-weight: 500;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .btn:hover {
@@ -165,13 +227,13 @@ section.active {
 
 .home-detail .btn-sci .sci a {
   display: inline-flex;
-  padding: .8rem;
-  border: .2rem solid var(--main-color);
+  padding: 0.8rem;
+  border: 0.2rem solid var(--main-color);
   border-radius: 50%;
   font-size: 2rem;
   color: var(--main-color);
-  margin: 0 .8rem;
-  transition: .5s;
+  margin: 0 0.8rem;
+  transition: 0.5s;
 }
 
 .home-detail .btn-sci .sci a:hover {
@@ -185,7 +247,7 @@ section.active {
   width: 23vw;
   height: 23vw;
   border-radius: 50%;
-  padding: .5rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -194,11 +256,16 @@ section.active {
 
 .home-img .img-box::before,
 .home-img .img-box::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 50rem;
   height: 50rem;
-  background: conic-gradient(transparent, transparent, transparent, var(--main-color));
+  background: conic-gradient(
+    transparent,
+    transparent,
+    transparent,
+    var(--main-color)
+  );
   transform: rotate(0deg);
   animation: rotate-border 10s linear infinite;
 }
@@ -219,7 +286,7 @@ section.active {
   height: 100%;
   background: var(--bg-color);
   border-radius: 50%;
-  border: .01rem solid var(--bg-color);
+  border: 0.01rem solid var(--bg-color);
   display: flex;
   justify-content: center;
   z-index: 1;
@@ -257,9 +324,9 @@ section.active {
 .services-container .services-box {
   padding: 3rem 2.5rem;
   background: var(--second-bg-color);
-  border: .2rem solid var(--second-bg-color);
+  border: 0.2rem solid var(--second-bg-color);
   border-radius: 1rem;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .services-container .services-box:hover {
@@ -275,7 +342,7 @@ section.active {
 
 .services-box .icon i {
   font-size: 4.5rem;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .services-box:hover .icon :not(a i) {
@@ -287,7 +354,7 @@ section.active {
   background: var(--white-color);
   border-radius: 50%;
   padding: 1rem;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .services-box:hover .icon a {
@@ -306,8 +373,8 @@ section.active {
 
 .services-box h3 {
   font-size: 3rem;
-  margin: .5rem 0 2rem;
-  transition: .5s;
+  margin: 0.5rem 0 2rem;
+  transition: 0.5s;
 }
 
 .services-box:hover h3 {
@@ -340,12 +407,12 @@ section.active {
   width: 100%;
   height: 5.3rem;
   background: var(--second-bg-color);
-  border: .2rem solid var(--second-bg-color);
+  border: 0.2rem solid var(--second-bg-color);
   font-size: 1.6rem;
   color: var(--white-color);
   font-weight: 500;
   margin-bottom: 2rem;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   cursor: pointer;
 }
 
@@ -376,7 +443,7 @@ section.active {
 }
 
 .resume-list::-webkit-scrollbar {
-  width: .7rem;
+  width: 0.7rem;
 }
 
 .resume-list::-webkit-scrollbar-thumb {
@@ -390,7 +457,7 @@ section.active {
 
 .resume-list .resume-item {
   background: var(--second-bg-color);
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   padding: 3rem 2.5rem;
   height: calc((45rem - 2rem / 2));
   display: flex;
@@ -407,7 +474,6 @@ section.active {
   margin-top: 2rem;
 }
 
-
 .resume-item .company {
   position: relative;
   margin-left: 2rem;
@@ -415,11 +481,11 @@ section.active {
 }
 
 .resume-item .company::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  padding: .5rem;
+  padding: 0.5rem;
   background: var(--main-color);
   border-radius: 50%;
   margin-left: -2rem;
@@ -439,7 +505,7 @@ section.active {
 
 .resume-detail.skills .resume-item i {
   font-size: 8.5rem;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .resume-detail.skills .resume-item:hover i {
@@ -452,12 +518,12 @@ section.active {
   background: var(--white-color);
   color: var(--bg-color);
   font-size: 1.6rem;
-  padding: .5rem 1rem;
-  border-radius: .6rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.6rem;
   pointer-events: none;
   opacity: 0;
-  transform: scale(.9);
-  transition: .2s;
+  transform: scale(0.9);
+  transition: 0.2s;
 }
 
 .resume-detail.skills .resume-item:hover span {
@@ -473,7 +539,7 @@ section.active {
 
 .resume-detail.about .resume-item {
   height: auto;
-  padding: 0 0 .5rem;
+  padding: 0 0 0.5rem;
   background: transparent;
 }
 
@@ -494,7 +560,7 @@ section.active {
   align-items: center;
   margin-top: 10px;
   width: 100vw;
-  grid-template-columns: 35% 35% 35%;
+  grid-template-columns: 505 505;
   column-gap: 10px;
   row-gap: 10px;
 }
@@ -504,4 +570,134 @@ section.active {
   height: 450px;
   object-fit: cover;
   object-position: center;
+}
+
+.contact-container {
+  display: grid;
+  grid-template-columns: 1fr 1.3fr;
+  gap: 3rem;
+}
+
+.contact-container .contact-box:first-child {
+  align-self: center;
+}
+
+.contact-box h2 {
+  font-size: 4.5rem;
+}
+
+.contact-box p {
+  font-size: 1.6rem;
+}
+
+.contact-box .desc {
+  margin: 1.5rem 0 2.5rem;
+}
+
+.contact-box .contact-detail {
+  display: flex;
+  align-items: center;
+  margin: 2rem 0;
+}
+
+.contact-detail i {
+  display: inline-flex;
+  background: var(--second-bg-color);
+  color: var(--main-color);
+  font-size: 3rem;
+  padding: 1.2rem;
+  border-radius: 0.6rem;
+  margin-right: 1.5rem;
+}
+
+.contact-detail .detail p:first-child {
+  color: var(--main-color);
+}
+
+.contact-box form {
+  background: var(--second-bg-color);
+  padding: 2.5rem 3.5rem 3.5rem;
+  border-radius: 1rem;
+  text-align: center;
+}
+
+.contact-box .heading {
+  font-size: 3.5rem;
+}
+
+.contact-box .field-box {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.contact-box .field-box input,
+.contact-box .field-box textarea {
+  padding: 1.5rem;
+  background: var(--bg-color);
+  border: 0.15rem solid var(--bg-color);
+  border-radius: 0.6rem;
+  font-size: 1.6rem;
+  color: var(--white-color);
+}
+
+.contact-box .field-box textarea {
+  grid-column: 1 / -1;
+  height: 26rem;
+  resize: none;
+}
+
+.contact-box .field-box input:focus,
+.contact-box .field-box textarea:focus {
+  border-color: var(--main-color);
+}
+
+.contact-box .btn {
+  margin-top: 2rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  header {
+   padding: 2rem 4%;
+  }
+
+  section {
+    padding: 10rem 4% 2rem;
+  }
+}
+
+@media screen and (max-width: 810px) {
+  .contact-box .field-box {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #menu-icon {
+    display: block;
+  }
+  nav {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 0;
+    background: var(--bg-color);
+    border-top: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    text-align: center;
+    display: none;
+  }
+
+  nav a {
+    display: block;
+    margin: 4rem 0;
+  }
 }
