--- a/css/style.css
+++ b/css/style.css
@@ -730,3 +730,43 @@ section.active {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+#menu-icon {
+  justify-content:
+}
+
+@media screen and (max-width: 600px) {
+  .home-img .img-box {
+    width: 30rem;
+    height: 30rem;
+  }
+
+  .contact-box .field-box {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .home-detail,
+  .resume-box h2,
+  .resume-box .heading,
+  .resume-box .desc,
+  .resume-detail.about .resume-item {
+    text-align: center;
+  }
+
+  .home-detail .btn-sci {
+    flex-direction: column-reverse;
+  }
+
+  .home-detail .btn-sci .sci {
+    margin-left: 0;
+    margin-bottom: 2rem;
+  }
+}
